@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add ::ResultSet::ResultsExist for efficient existence checks
+   (Thanks ribasushi!)
  - Fix ::RemoveColumns and ::AutoRemoveColumns to not wreak havoc when select/as
    is used (Thanks Vladimir Melnik for test and ribasushi for hint at fix!)
  - Allow easily subclassing types to be skipped in ::ToJSON
